[package]
name = "file-manipulator"
version = "0.1.0"
authors = ["Robertosnap <robertosnap@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
regex = "1.3.9"

[dev-dependencies]
rand = "0.7.3"

[lib]
name = "lib"
path = "src/lib.rs"
